# go/api.go
@@ -4,6 +4,7 @@
  * A simple manager for storing your passwords
  *
  * API version: 1.0.0
+ * Contact: korotkov.ivan.s@gmail.com
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
 
