# go/routers.go
@@ -4,6 +4,7 @@
  * A simple manager for storing your passwords
  *
  * API version: 1.0.0
+ * Contact: korotkov.ivan.s@gmail.com
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
 
@@ -12,14 +13,13 @@ package openapi
 import (
 	"encoding/json"
 	"errors"
+	"github.com/gorilla/mux"
 	"io/ioutil"
 	"mime/multipart"
 	"net/http"
 	"os"
 	"strconv"
 	"strings"
-
-	"github.com/gorilla/mux"
 )
 
 // A Route defines the parameters for an api endpoint
